Add Bluetooth service for android app

--- a/ArduinoThermometer/ArduinoThermometer - Backup.csproj
+++ b/ArduinoThermometer/ArduinoThermometer - Backup.csproj
@@ -35,11 +35,9 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
-
+		<MauiSplashScreen Include="Resources\Images\thermometer.svg" BaseSize="512,512" />
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -50,7 +48,9 @@
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
-	  <PackageReference Include="Syncfusion.Maui.Core" Version="20.3.59" />
+	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="20.3.49" />
 	</ItemGroup>
+
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionArduinoThermometerHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
