--- a/ArduinoThermometer/ArduinoThermometer.csproj
+++ b/ArduinoThermometer/ArduinoThermometer.csproj
@@ -53,4 +53,10 @@
 	  <PackageReference Include="Syncfusion.Maui.Core" Version="20.3.59" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="About.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
